--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movie Search</title>
-    <link rel="stylesheet" href="movie.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
@@ -49,6 +49,6 @@
             <div id="favorites-list"></div>
         </div>
     </div>
-    <script src="movie.js"></script>   
+    <script src="script.js"></script>   
 </body>
 </html>
